<resources>
    <string name="app_name">RecyclingApp</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_fragment">Login Fragment</string>
    <string name="welcome">Welcome!</string>
    <string name="login_details_pls">Please enter your login details.</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="username">username</string>
</resources>